<resources>
    <string name="app_name">检测助手</string>
    <string name="app_update">应用正在下载，请稍候.......</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开加载更多</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="tips_exit_soft">再次点击退出检测助手！</string>
    <string name="dl">登录</string>
    <string name="dl_space">登  录</string>
    <string name="qd_space">确  定</string>
    <string name="zbjx">准备就绪</string>
    <string name="fhxzcsxm">返回选择测试项目</string>
    <string name="tcdl">退出登录</string>

    <string name="inout_title">1.综合阶段-登入登出（第%1$s轮）</string>
    <string name="inout_content">请将终端上电启动，进行第%1$s次登入登出测试。友情提示：检测过程总共需要进行3轮登入登出测试。</string>
    <string name="police_title">1.综合阶段-报警测试</string>
    <string name="police_content">触发三级报警，依照国标要求执行报警机制</string>
    <string name="police_content_notice">触发报警前，必须保证有效2分钟的实时数据上传</string>
    <string name="supply_title">1.综合阶段-补发测试</string>
    <string name="supply_content">车辆保持启动状态，终端离线5分钟后上线，依照国标要求进行数据补发。( 建议检测机构准备一个断连屏蔽盒对天线进行屏蔽 )</string>
    <string name="drive_title">2.行驶阶段-行驶测试</string>
    <string name="drive_content">进入行驶测试，要求车辆行驶时至少30分钟以上</string>
    <string name="drive_content_notice">不提供检测结果</string>
    <string name="charge_title">3.充电阶段-充电测试</string>
    <string name="charge_content">请插上充电枪，进行充电操作，要求至少充电15分钟</string>
    <string name="charge_content_notice">不提供检测结果</string>
    <string name="uploadpic_police">请拍摄能够表征三级报警已经触发照片</string>
    <string name="uploadpic_driving">图为行驶测试照片\n显示信息应包含当前车速、车辆累计里程、SOC</string>
    <string name="uploadpic_charging">图为充电测试照片\n显示充电过程中某一时刻仪表盘充电电流、SOC等信息</string>
</resources>
